<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PassSafe4Android</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Suche</string>
    <string name="action_addentry">Neuer Eintrag</string>
    <string name="action_addcategory">Neue Kategorie</string>
    <string name="action_removeentry">Eintrag entfernen</string>
    <string name="action_editentry">Eintrag bearbeiten</string>

    <string name="dialog_firstappstart_title">Dies ist das erste Mal, dass Sie PassSafe starten. Sie haben die Möglichkeit eine neue Datenbank zu erstellen oder eine bereits vorhandene online Datenbank zu nutzen.</string>
    <string name="dialog_firstappstart_newdatabase">Datenbank erstellen</string>
    <string name="dialog_firstappstart_synchronizedatabase">Datenbank synchronisieren</string>

    <string name="fragment_preferences_sync">Synchronisierung</string>
    <string name="fragment_preferences_sync_activation">Synchronisierung einschalten</string>
    <string name="fragment_preferences_sync_types">Storage für Synchronisierung</string>
    <string name="fragment_preferences_sync_gdrive">GoogleDrive</string>

    <string name="fragment_sync_text">Bitte haben Sie einen Augenblick Geduld, während ihre Datenbank synchronisiert wird.</string>

    <string name="hello_world">Hello world!</string>

    <string name="drawer_imagedescription">PassSafe Icon"</string>
    <string name="drawer_title">Kategorien</string>

    <string name="fragment_login_enterpassword">Bitte geben Sie ihr Passwort ein:</string>
    <string name="fragment_login_loginbutton">Einloggen</string>
    <string name="fragment_login_showpassword">Passwort anzeigen</string>
    <string name="fragment_login_apptitle">PassSafe 4 Android</string>
    <string name="fragment_login_appicon">PassSafe 4 Android Icon</string>

    <string name="fragment_entrylist_contextmenu_edit">Editieren</string>
    <string name="fragment_entrylist_contextmenu_delete">Entfernen</string>
    <string name="fragment_entrylist_info_deletionsuccessful">Eintrag erfolgreich entfernt.</string>
    <string name="fragment_entrylist_info_deletionfailed">Eintrag konnte nicht entfernt werden.</string>

    <string name="fragment_entry_hideshow">Anzeigen/Verstecken</string>
    <string name="fragment_entry_copyusername">Benutzernamen kopieren</string>
    <string name="fragment_entry_copypassword">Passwort kopieren</string>
    <string name="fragment_entry_openurl">URL öffnen</string>
    <string name="fragment_entry_labelurl">Webseite:</string>
    <string name="fragment_entry_labelusername">Benutzer:</string>
    <string name="fragment_entry_labelpassword">Passwort:</string>
    <string name="fragment_entry_hint_toggleusername">Ein- und ausblenden des Benutzers</string>
    <string name="fragment_entry_hint_togglepassword">Ein- und ausblenden des Passwortes</string>
    <string name="fragment_entry_hint_copyusername">Benutzer in die Zwischenablage kopieren</string>
    <string name="fragment_entry_hint_copypassword">Passwort in die Zwischenablage kopieren</string>
    <string name="fragment_entry_hint_openurl">Öffnen der Webseite im Browser</string>
    <string name="fragment_entry_toast_copiedusername">Benutzer in die Zwischenablage kopiert.</string>
    <string name="fragment_entry_toast_copiedpassword">Passwort in die Zwischenablage kopiert.</string>
    <string name="fragment_entry_toast_removalsuccessful">Eintrag erfolgreich entfernt.</string>
    <string name="fragment_entry_toast_removalfailed">Eintrag konnte nicht entfernt werden.</string>

    <string name="fragment_addentry_label_category">Kategorie: *</string>
    <string name="fragment_addentry_label_title">Titel: *</string>
    <string name="fragment_addentry_label_url">Webseite:</string>
    <string name="fragment_addentry_label_username">Benutzer:</string>
    <string name="fragment_addentry_label_password">Passwort: *</string>
    <string name="fragment_addentry_label_verifypassword">Passwort bestätigen: *</string>
    <string name="fragment_addentry_label_comment">Kommentar:</string>
    <string name="fragment_addentry_label_requiredfields">* Pflichtfelder</string>
    <string name="fragment_addentry_button_save">Speichern</string>
    <string name="fragment_addentry_savedsuccessfully">Eintrag gespeichert.</string>
    <string name="fragment_addentry_savefailed">Speichern fehlgeschlagen.</string>
    <string name="fragment_addentry_error_titlemissing">Sie müssen einen Namen eingeben.</string>
    <string name="fragment_addentry_error_passwordmissing">Sie müssen ein Passwort eingeben.</string>
    <string name="fragment_addentry_error_passwordverificationmissing">Sie müssen das Passwort zur Sicherheit
        bestätigen.
    </string>
    <string name="fragment_addentry_error_passwordverificationfailed">Die beiden Passwörter sind nicht gleich.</string>

    <string name="fragment_addcategory_label_title">Titel: *</string>
    <string name="fragment_addcategory_button_save">Speichern</string>
    <string name="fragment_addcategory_error_titlemissing">Sie müssen einen Namen eingeben.</string>
    <string name="fragment_addcategory_savedsuccessfully">Kategorie gespeichert.</string>
    <string name="fragment_addcategory_savefailed">Speichern fehlgeschlagen.</string>

    <string name="fragment_editentry_updatesuccessful">Eintrag aktualisiert.</string>
    <string name="fragment_editentry_updatefailed">Eintrag konnte nicht aktualisiert werden.</string>
</resources>
